# git-project-sync

./: .gitignore  ACCEPTANCE.md  AGENTS.md  Cargo.toml  GitVersion.yml  PLANS.md  README.md  SPEC.md  go.mod  go.sum  mkdocs.yml
.codex/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  release.yml  version-bump.yml
ai/: RUNBOOK.md  START_HERE.md  agents.yaml  backlog.yaml  master-plan.yaml  sprint-01.yaml  sprint-02.yaml  sprint-03.yaml  sprint-04.yaml  sprint-05.yaml  sprint-06.yaml  sprint-07.yaml  sprint-08.yaml  sprint-09.yaml  sprint-10.yaml
ai/skills/: README.md  cli-parity.md  daemon-traceability.md  git-safety-sync.md  multi-source-auth.md  platform-install-service.md  self-update-release.md  skills.yaml  test-hardening.md  tui-operations.md
cmd/syncctl/: auth_cmd.go  auth_ssh_cmd.go  cache_cmd.go  cache_cmd_test.go  config_cmd.go  config_cmd_test.go  daemon_cmd.go  discover_cmd.go  doctor_cmd.go  doctor_stats_cmd_test.go  events_cmd.go  events_trace_cmd_test.go  install_cmd.go  install_daemon_cmd_test.go  install_runtime.go  main.go  main_test.go  maintenance_cmd.go  maintenance_cmd_test.go  repo_auth_sync_cmd_test.go  repo_cmd.go  runtime_helpers.go  runtime_helpers_test.go  service_cmd.go  source_cmd.go  source_cmd_test.go  state_cmd.go  state_cmd_test.go  stats_cmd.go  stats_cmd_test.go  sync_cmd.go  trace_cmd.go  update_cmd.go  update_cmd_test.go  version_sync_startup.go  version_sync_startup_test.go  workspace_cmd.go  workspace_cmd_test.go
cmd/syncd/: config_path.go  main.go  service_other.go  service_windows.go
cmd/syncsetup/: main.go  main_test.go
cmd/synctui/: config_path.go  main.go  main_test.go
configs/: config.example.yaml
crates/mirror-cli/: Cargo.toml
crates/mirror-cli/src/: i18n.rs  install.rs  logging.rs  main.rs  repo_overview.rs  token_check.rs  tray.rs  tui.rs  update.rs
crates/mirror-cli/src/cli/: app.rs  args.rs  config_cmd.rs  daemon_cmd.rs  mod.rs  sync_cmd.rs  target_cmd.rs  tests.rs  token_cmd.rs
crates/mirror-cli/src/cli/misc_cmd/: install_update_task.rs  mod.rs  service_health.rs  webhook_cache.rs
crates/mirror-cli/src/cli/shared/: checks.rs  elevate_audit.rs  io_render.rs  mod.rs  provider_errors.rs  sync_ops.rs
crates/mirror-cli/src/i18n/: af.json  en-001.json  nl.json
crates/mirror-cli/src/install/: lock.rs  metadata.rs  mod.rs  path_env.rs  status.rs
crates/mirror-cli/src/tui/: app_core.rs  mod.rs  tests.rs
crates/mirror-cli/src/tui/draw/: core.rs  main_install.rs  mod.rs  repo_misc.rs  status_audit.rs  tokens_forms.rs
crates/mirror-cli/src/tui/handle/: dispatch.rs  forms_targets.rs  main_install_dashboard.rs  mod.rs  status_misc.rs  token.rs
crates/mirror-cli/src/tui/helpers/: app.rs  layout.rs  mod.rs  model.rs  progress.rs  sync.rs  time.rs
crates/mirror-cli/src/tui/jobs/: mod.rs  poll.rs  repo.rs  start.rs
crates/mirror-cli/src/update/: apply.rs  auto.rs  errors.rs  mod.rs  repo_check.rs  restart.rs  tests.rs
crates/mirror-core/: Cargo.toml
crates/mirror-core/src/: archive.rs  audit.rs  cache.rs  config.rs  daemon.rs  deleted.rs  git_sync.rs  lib.rs  lockfile.rs  model.rs  paths.rs  provider.rs  repo_status.rs  scheduler.rs  service.rs  service_common.rs  service_linux.rs  service_macos.rs  service_windows.rs  sync_engine.rs  sync_engine_apply.rs  sync_engine_fs.rs  sync_engine_inventory.rs  sync_engine_missing.rs  sync_engine_missing_events.rs  sync_engine_orchestrator.rs  sync_engine_status.rs  sync_engine_types.rs  sync_engine_work_items.rs  sync_engine_workers.rs
crates/mirror-core/src/cache/: backoff.rs  health.rs  inventory.rs  migration.rs  runtime.rs
crates/mirror-providers/: Cargo.toml
crates/mirror-providers/src/: auth.rs  azure_devops.rs  azure_models.rs  azure_scope.rs  github.rs  github_auth.rs  github_models.rs  github_paging.rs  github_scope.rs  gitlab.rs  gitlab_models.rs  gitlab_scope.rs  http.rs  lib.rs  provider_paging.rs  registry.rs  spec.rs
docs/: ACCEPTANCE_TESTS.md  ARCHITECTURE.md  CLI_SPEC.md  CONFIG_SCHEMA.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  INCIDENT_RESPONSE.md  INSTALL.md  LTS_POLICY.md  OPERATIONS.md  PAT_PERMISSIONS.md  PLANS_ARCHIVE.md  QUICKSTART.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  REQUIREMENTS.md  SECURITY_MODEL.md  SLOS.md  TEST_STRATEGY.md  TROUBLESHOOTING.md  USER_GUIDE.md  architecture.md  decisions.md  handbook.md  index.md  package-lock.json  package.json
scripts/: README.md  ci.ps1  ci.sh  install.ps1  install.sh  setup-githooks.ps1  setup-githooks.sh  uninstall.ps1  uninstall.sh  update.ps1  update.sh
scripts/ci/: coverage.sh  (+2 more)
(+187 files in other folders)
