[package]
name = "mirror-cli"
version = "1.2.3"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mirror-core = { path = "../mirror-core" }
mirror-providers = { path = "../mirror-providers" }
reqwest = { version = "0.13", default-features = false }
ratatui = "0.30"
crossterm = "0.29"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
semver = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["formatting"] }
directories = "5"


[dev-dependencies]
tempfile = "3"
