[package]
name = "mirror-cli"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mirror-core = { path = "../mirror-core" }
mirror-providers = { path = "../mirror-providers" }
reqwest = { version = "0.13", default-features = false, features = ["blocking"] }
ratatui = "0.30"
crossterm = "0.29"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
semver = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt", "time"] }
time = { version = "0.3", features = ["formatting"] }
directories = "6"


[dev-dependencies]
tempfile = "3"
