[package]
name = "mirror-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
directories = "5"
fs2 = "0.4"
git2 = "0.19"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tracing = "0.1"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
