[package]
name = "mirror-core"
version = "2.0.1"
edition = "2024"

[dependencies]
anyhow = "1"
directories = "6"
fs2 = "0.4"
git2 = "0.20"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "time"] }
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
