[package]
name = "mirror-providers"
version = "1.2.3"
edition = "2024"

[dependencies]
anyhow = "1"
keyring = "3"
mirror-core = { path = "../mirror-core" }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
