[package]
name = "mirror-providers"
version = "1.2.4"
edition = "2024"

[dependencies]
anyhow = "1"
keyring = { version = "3", features = ["linux-native"] }
mirror-core = { path = "../mirror-core" }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["time"] }
